--- a/web/index.html
+++ b/web/index.html
@@ -91,6 +91,10 @@
   
   
   
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -151,7 +155,7 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #0F172A;
+        background-color: #040917;
           }
     }
   </style>
@@ -169,6 +173,8 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
   
   
   
